2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/avi/gstavisubtitle.c: (IS_BOM_UTF8), (IS_BOM_UTF16_BE),
	  (IS_BOM_UTF16_LE), (IS_BOM_UTF32_BE), (IS_BOM_UTF32_LE),
	  (gst_avi_subtitle_extract_file), (gst_avi_subtitle_parse_gab2_chunk):
	  Detect other UTF byte order markers and convert to UTF-8 as
	  appropriate.

2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/avi/gstavisubtitle.c: (src_template),
	  (gst_avi_subtitle_extract_utf8_file),
	  (gst_avi_subtitle_parse_gab2_chunk), (gst_avi_subtitle_chain),
	  (gst_avi_subtitle_base_init), (gst_avi_subtitle_class_init),
	  (gst_avi_subtitle_init), (gst_avi_subtitle_change_state):
	* gst/avi/gstavisubtitle.h:
	  Refactor a bit; fix name extraction; don't assume all the data
	  in the chunk is actually subtitle data, there may be padding at
	  the end; fix GST_ELEMENT_ERROR usage; store extracted subtitle
	  file so it's there to send again after a seek (for future use).

2007-12-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/avi/Makefile.am:
	* gst/avi/gstavi.c:
	* gst/avi/gstavisubtitle.c:
	* gst/avi/gstavisubtitle.h:
	* tests/check/Makefile.am:
	* tests/check/elements/avisubtitle.c:
	* win32/common/config.h:
		Add avi subtitle element for bug #442034. Need seeking support
		and more support for character conversion.

2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	  Include common/win32.mak for CRLF check of win32 project
	  files (see #393626).

	* win32/vs6/libgstpng.dsp:
	  Fix line endings and do cvs admin -kb.

2007-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/jpeg/gstjpegdec.c: (gst_jpeg_dec_chain):
	Actually drop the buffers which are outside the currently configured
	segment instead of just emitting a WARNING.

2007-12-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/flac/gstflacdec.c: (gst_flac_dec_metadata_callback),
	(gst_flac_dec_write):
	* ext/flac/gstflacdec.h: